<resources>
    <string name="app_name">Swap</string>

    <!--Tela Login-->
    <string name="campo_email">Digite seu email</string>
    <string name="campo_senha">Digite sua senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="botao_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="botao_cadastrar">Cadastre-se</string>
    <string name="botao_entrar_facebook">Entrar com Facebook</string>

    <!--Tela Esqueceu a Senha-->
    <string name="texto_esqueceu_senha">Insira o email que você utilizou no cadastro. Nós mandaremos um email com um linl para você redefinir sua senha.</string>
    <string name="botao_enviar">Enviar</string>
    
    <!--Tela Cadastro-->
    <string name="texto_cadastro">Cadastro</string>
    <string name="campo_nome">Digite seu nome</string>
    <string name="campo_repetir_senha">Digite sua senha novamente</string>
    <string name="botao_criar_conta">Criar conta</string>

</resources>
